--- a/sass/app.scss
+++ b/sass/app.scss
@@ -50,3 +50,5 @@ span.fb .fb_iframe_widget { margin-bottom: -5px !important; margin-left: -15px !
 
 #I0_1342644544594 { margin: 0 0 -4px 2px !important; }
 .float-right { float: right; margin-left: 20px;}
+
+#search { margin-bottom: ($minPad * 3) }
