updates to individual.php page

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -52,3 +52,10 @@ span.fb .fb_iframe_widget { margin-bottom: -5px !important; margin-left: -15px !
 .float-right { float: right; margin-left: 20px;}
 
 #search { margin-bottom: ($minPad * 3) }
+
+.make-white { color: white; }
+.glyph.social.make-white { font-size: 1.5em; padding-right: $minPad; 
+	&:first-child { padding-left: $minPad;}
+}
+
+.glyph.social.author-social { font-size: 1.5em; padding-right: $minPad;  }
