--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4797,3 +4797,24 @@ span.fb .fb_iframe_widget {
 #search {
   margin-bottom: 30px;
 }
+
+/* line 56, ../sass/app.scss */
+.make-white {
+  color: white;
+}
+
+/* line 57, ../sass/app.scss */
+.glyph.social.make-white {
+  font-size: 1.5em;
+  padding-right: 10px;
+}
+/* line 58, ../sass/app.scss */
+.glyph.social.make-white:first-child {
+  padding-left: 10px;
+}
+
+/* line 61, ../sass/app.scss */
+.glyph.social.author-social {
+  font-size: 1.5em;
+  padding-right: 10px;
+}
