--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4753,22 +4753,31 @@ header#homepage .button:hover {
   width: 100%;
 }
 
+/* line 35, ../sass/app.scss */
+.home-image {
+  margin-top: 15px;
+}
+/* line 35, ../sass/app.scss */
+.home-image:last-child {
+  margin-bottom: 20px;
+}
+
 /* -----------------------------------------
    Articles & Individual
 ----------------------------------------- */
-/* line 41, ../sass/app.scss */
+/* line 42, ../sass/app.scss */
 img.bump-photo {
   margin-top: 14px !important;
 }
 
-/* line 42, ../sass/app.scss */
+/* line 43, ../sass/app.scss */
 .top-social ul li {
   float: left;
   list-style: none;
   padding: 0 10px;
 }
 
-/* line 44, ../sass/app.scss */
+/* line 45, ../sass/app.scss */
 .twitter-share-button.twitter-count-horizontal {
   width: 90px;
   height: 20px;
@@ -4776,44 +4785,44 @@ img.bump-photo {
   margin-left: 20px;
 }
 
-/* line 49, ../sass/app.scss */
+/* line 50, ../sass/app.scss */
 span.fb .fb_iframe_widget {
   margin-bottom: -5px !important;
   margin-left: -15px !important;
 }
 
-/* line 51, ../sass/app.scss */
+/* line 52, ../sass/app.scss */
 #I0_1342644544594 {
   margin: 0 0 -4px 2px !important;
 }
 
-/* line 52, ../sass/app.scss */
+/* line 53, ../sass/app.scss */
 .float-right {
   float: right;
   margin-left: 20px;
 }
 
-/* line 54, ../sass/app.scss */
+/* line 55, ../sass/app.scss */
 #search {
   margin-bottom: 30px;
 }
 
-/* line 56, ../sass/app.scss */
+/* line 57, ../sass/app.scss */
 .make-white {
   color: white;
 }
 
-/* line 57, ../sass/app.scss */
+/* line 58, ../sass/app.scss */
 .glyph.social.make-white {
   font-size: 1.5em;
   padding-right: 10px;
 }
-/* line 58, ../sass/app.scss */
+/* line 59, ../sass/app.scss */
 .glyph.social.make-white:first-child {
   padding-left: 10px;
 }
 
-/* line 61, ../sass/app.scss */
+/* line 62, ../sass/app.scss */
 .glyph.social.author-social {
   font-size: 1.5em;
   padding-right: 10px;
