coded visuals for index.php

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -34,6 +34,40 @@ $minMargin: 10px;
 
 .home-image { margin-top: ($minMargin +5); &:last-child { margin-bottom: ($minMargin *2); }}
 
+header#homepage {background: url("../images/header.png") top left no-repeat #292f36 !important; padding: 22px 0 202px; }
+#homepageFeatures {padding: 44px 0 !important; background: #f6f5f5 !important;}
+section#caseStudies { margin-bottom: ($minMargin + 34) !important;}
+
+#getStarted { h6 {font-weight: 300; font-size: 18px; line-height: .2;} 
+}
+
+.small.button.download-option { margin-top: 14px; padding: 17px 30px;font-size: 14px; border: none; }
+
+/*.download-option {
+background: #3F3F3F;
+padding: 20px;}
+
+
+.download-option a.button {
+margin: 22px 0 44px;
+color: #3F3F3F;
+border: none;
+background: white;}
+
+
+.download-option span, .download-option a {
+color: white;
+font-size: 12px;
+font-size: 1.2rem;
+display: block;
+word-wrap: break-word;
+line-height: 1.3;
+margin-bottom: 3px;}
+
+.download-option {
+background: #3F3F3F;
+padding: 20px;}*/
+
 
 /* -----------------------------------------
    Articles & Individual
