--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4762,22 +4762,78 @@ header#homepage .button:hover {
   margin-bottom: 20px;
 }
 
+/* line 37, ../sass/app.scss */
+header#homepage {
+  background: url("../images/header.png") top left no-repeat #292f36 !important;
+  padding: 22px 0 202px;
+}
+
+/* line 38, ../sass/app.scss */
+#homepageFeatures {
+  padding: 44px 0 !important;
+  background: #f6f5f5 !important;
+}
+
+/* line 39, ../sass/app.scss */
+section#caseStudies {
+  margin-bottom: 44px !important;
+}
+
+/* line 41, ../sass/app.scss */
+#getStarted h6 {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: .2;
+}
+
+/* line 44, ../sass/app.scss */
+.small.button.download-option {
+  margin-top: 14px;
+  padding: 17px 30px;
+  font-size: 14px;
+  border: none;
+}
+
+/*.download-option {
+background: #3F3F3F;
+padding: 20px;}
+
+
+.download-option a.button {
+margin: 22px 0 44px;
+color: #3F3F3F;
+border: none;
+background: white;}
+
+
+.download-option span, .download-option a {
+color: white;
+font-size: 12px;
+font-size: 1.2rem;
+display: block;
+word-wrap: break-word;
+line-height: 1.3;
+margin-bottom: 3px;}
+
+.download-option {
+background: #3F3F3F;
+padding: 20px;}*/
 /* -----------------------------------------
    Articles & Individual
 ----------------------------------------- */
-/* line 42, ../sass/app.scss */
+/* line 76, ../sass/app.scss */
 img.bump-photo {
   margin-top: 14px !important;
 }
 
-/* line 43, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
 .top-social ul li {
   float: left;
   list-style: none;
   padding: 0 10px;
 }
 
-/* line 45, ../sass/app.scss */
+/* line 79, ../sass/app.scss */
 .twitter-share-button.twitter-count-horizontal {
   width: 90px;
   height: 20px;
@@ -4785,44 +4841,44 @@ img.bump-photo {
   margin-left: 20px;
 }
 
-/* line 50, ../sass/app.scss */
+/* line 84, ../sass/app.scss */
 span.fb .fb_iframe_widget {
   margin-bottom: -5px !important;
   margin-left: -15px !important;
 }
 
-/* line 52, ../sass/app.scss */
+/* line 86, ../sass/app.scss */
 #I0_1342644544594 {
   margin: 0 0 -4px 2px !important;
 }
 
-/* line 53, ../sass/app.scss */
+/* line 87, ../sass/app.scss */
 .float-right {
   float: right;
   margin-left: 20px;
 }
 
-/* line 55, ../sass/app.scss */
+/* line 89, ../sass/app.scss */
 #search {
   margin-bottom: 30px;
 }
 
-/* line 57, ../sass/app.scss */
+/* line 91, ../sass/app.scss */
 .make-white {
   color: white;
 }
 
-/* line 58, ../sass/app.scss */
+/* line 92, ../sass/app.scss */
 .glyph.social.make-white {
   font-size: 1.5em;
   padding-right: 10px;
 }
-/* line 59, ../sass/app.scss */
+/* line 93, ../sass/app.scss */
 .glyph.social.make-white:first-child {
   padding-left: 10px;
 }
 
-/* line 62, ../sass/app.scss */
+/* line 96, ../sass/app.scss */
 .glyph.social.author-social {
   font-size: 1.5em;
   padding-right: 10px;
