--- a/sass/app.scss
+++ b/sass/app.scss
@@ -11,12 +11,17 @@
 
 $minPad: 10px;
 $minMargin: 10px;
+$headerColor: #292F36;
 
 
 /* -----------------------------------------
    Shared Styles
 ----------------------------------------- */
 
+header {
+  background-color: $headerColor;
+  padding: 22px 0;
+}
 
 
 /* -----------------------------------------
@@ -34,7 +39,7 @@ $minMargin: 10px;
 
 .home-image { margin-top: ($minMargin +5); &:last-child { margin-bottom: ($minMargin *2); }}
 
-header#homepage {background: url("../images/header.png") top left no-repeat #292f36 !important; padding: 22px 0 202px; }
+header#homepage {background: url("../images/header.png") top left no-repeat #292f36 !important; padding: 22px 0 102px; }
 #homepageFeatures {padding: 44px 0 !important; background: #f6f5f5 !important;}
 section#caseStudies { margin-bottom: ($minMargin + 34) !important;}
 
@@ -42,31 +47,6 @@ section#caseStudies { margin-bottom: ($minMargin + 34) !important;}
 }
 
 .small.button.download-option { margin-top: 14px; padding: 17px 30px;font-size: 14px; border: none; }
-
-/*.download-option {
-background: #3F3F3F;
-padding: 20px;}
-
-
-.download-option a.button {
-margin: 22px 0 44px;
-color: #3F3F3F;
-border: none;
-background: white;}
-
-
-.download-option span, .download-option a {
-color: white;
-font-size: 12px;
-font-size: 1.2rem;
-display: block;
-word-wrap: break-word;
-line-height: 1.3;
-margin-bottom: 3px;}
-
-.download-option {
-background: #3F3F3F;
-padding: 20px;}*/
 
 
 /* -----------------------------------------
