--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4723,70 +4723,77 @@ header#homepage .button:hover {
 /* -----------------------------------------
    Shared Styles
 ----------------------------------------- */
+/* line 28, ../sass/_presentation.scss */
+/* line 22, ../sass/app.scss */
+header {
+  background-color: #292f36;
+  padding: 22px 0;
+}
+
 /* -----------------------------------------
    Home
 ----------------------------------------- */
-/* line 25, ../sass/app.scss */
+/* line 31, ../sass/app.scss */
 .commit {
   color: white;
   font-family: "OpenSans", "Helvetica Neue", "Helvetica", Arial, Verdana, sans-serif;
 }
-/* line 26, ../sass/app.scss */
+/* line 32, ../sass/app.scss */
 .commit li {
   list-style: none;
   padding-bottom: 10px;
 }
 
-/* line 29, ../sass/app.scss */
+/* line 35, ../sass/app.scss */
 .case-study {
   background: none !important;
   padding: 8px 20px 8px 48% !important;
 }
 
-/* line 31, ../sass/app.scss */
+/* line 37, ../sass/app.scss */
 #github {
   background: #3f3f3f;
   padding: 20px;
 }
-/* line 32, ../sass/app.scss */
+/* line 38, ../sass/app.scss */
 #github img {
   width: 100%;
 }
 
-/* line 35, ../sass/app.scss */
+/* line 41, ../sass/app.scss */
 .home-image {
   margin-top: 15px;
 }
-/* line 35, ../sass/app.scss */
+/* line 41, ../sass/app.scss */
 .home-image:last-child {
   margin-bottom: 20px;
 }
 
-/* line 37, ../sass/app.scss */
+/* line 43, ../sass/app.scss */
 header#homepage {
   background: url("../images/header.png") top left no-repeat #292f36 !important;
-  padding: 22px 0 202px;
+  padding: 22px 0 102px;
 }
 
-/* line 38, ../sass/app.scss */
+/* line 44, ../sass/app.scss */
 #homepageFeatures {
   padding: 44px 0 !important;
   background: #f6f5f5 !important;
 }
 
-/* line 39, ../sass/app.scss */
+/* line 45, ../sass/app.scss */
 section#caseStudies {
   margin-bottom: 44px !important;
 }
 
-/* line 41, ../sass/app.scss */
+/* line 47, ../sass/app.scss */
 #getStarted h6 {
   font-weight: 300;
   font-size: 18px;
   line-height: .2;
 }
 
-/* line 44, ../sass/app.scss */
+/* line 50, ../sass/app.scss */
 .small.button.download-option {
   margin-top: 14px;
   padding: 17px 30px;
@@ -4794,46 +4801,22 @@ section#caseStudies {
   border: none;
 }
 
-/*.download-option {
-background: #3F3F3F;
-padding: 20px;}
-
-
-.download-option a.button {
-margin: 22px 0 44px;
-color: #3F3F3F;
-border: none;
-background: white;}
-
-
-.download-option span, .download-option a {
-color: white;
-font-size: 12px;
-font-size: 1.2rem;
-display: block;
-word-wrap: break-word;
-line-height: 1.3;
-margin-bottom: 3px;}
-
-.download-option {
-background: #3F3F3F;
-padding: 20px;}*/
 /* -----------------------------------------
    Articles & Individual
 ----------------------------------------- */
-/* line 76, ../sass/app.scss */
+/* line 57, ../sass/app.scss */
 img.bump-photo {
   margin-top: 14px !important;
 }
 
-/* line 77, ../sass/app.scss */
+/* line 58, ../sass/app.scss */
 .top-social ul li {
   float: left;
   list-style: none;
   padding: 0 10px;
 }
 
-/* line 79, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 .twitter-share-button.twitter-count-horizontal {
   width: 90px;
   height: 20px;
@@ -4841,44 +4824,44 @@ img.bump-photo {
   margin-left: 20px;
 }
 
-/* line 84, ../sass/app.scss */
+/* line 65, ../sass/app.scss */
 span.fb .fb_iframe_widget {
   margin-bottom: -5px !important;
   margin-left: -15px !important;
 }
 
-/* line 86, ../sass/app.scss */
+/* line 67, ../sass/app.scss */
 #I0_1342644544594 {
   margin: 0 0 -4px 2px !important;
 }
 
-/* line 87, ../sass/app.scss */
+/* line 68, ../sass/app.scss */
 .float-right {
   float: right;
   margin-left: 20px;
 }
 
-/* line 89, ../sass/app.scss */
+/* line 70, ../sass/app.scss */
 #search {
   margin-bottom: 30px;
 }
 
-/* line 91, ../sass/app.scss */
+/* line 72, ../sass/app.scss */
 .make-white {
   color: white;
 }
 
-/* line 92, ../sass/app.scss */
+/* line 73, ../sass/app.scss */
 .glyph.social.make-white {
   font-size: 1.5em;
   padding-right: 10px;
 }
-/* line 93, ../sass/app.scss */
+/* line 74, ../sass/app.scss */
 .glyph.social.make-white:first-child {
   padding-left: 10px;
 }
 
-/* line 96, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
 .glyph.social.author-social {
   font-size: 1.5em;
   padding-right: 10px;
